--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "budo index.js:bundle.js"
+    "start": "budo index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +14,13 @@
   },
   "dependencies": {
     "simple-peer": "^6.1.0"
-  }
+},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dhruvp-8/p2pvideochat"
+  },
+  "keywords": [
+    "node"
+  ],
+  "license": "MIT"
 }
