--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "budo index.js"
+    "start": "budo index.js:bundle.js"
   },
   "author": "",
   "license": "ISC",
